# libMidi

./: .travis.yml  CHANGES  CMakeLists.txt  INSTALL.md  README.md  appveyor.yml  libMidi.sln
References/: Frequencies of Musical Notes, A4 = 440 Hz.url  Frequencies of Musical Pitches.url  General MIDI - Wikipedia, the free encyclopedia.url  Kevin Boone's Web site.url  MIDI Event Table.url  Midi Delta Time Ticks to Seconds – Page 2 – LAST RAY OF HOPE.url  MidiMessage class.url  SMS--Ringtone--RTTTL--MIDI - search.cpan.org.url  Skytopia- Crash course on the standard MIDI specification (SMF).url  Standard MIDI File Structure.url  mario1up.mid  mario1up.rtttl.txt
ci/appveyor/: build_library.bat  test_script.bat
ci/travis/: build_library.sh
cmake/: libmidi-config-version.cmake.in  libmidi-config.cmake.in
docs/: Doxyfile.in  libMidi.xcf
include/libmidi/: instruments.h  libMidi.h  libmidi.h  notes.h  pitches.h  winstdint.h
libMidi/: dllmain.cpp  libMidi.cpp  libMidi.h  libMidi.vcproj  midiinstruments.h  miditypes.h  varlength.h
samples/: CMakeLists.txt  samples.cpp
src/common/: varlength.h
src/libMidi/: CMakeLists.txt  config.h.in  dllmain.cpp  instruments.cpp  instruments.h  libMidi.cpp  libMidi.h  libmidi.cpp  midiinstruments.h  notes.cpp  pitches.h  varlength.h  version.h.in  winstdint.h
test/libmidi_unittest/: CMakeLists.txt  TestInstruments.cpp  TestInstruments.h  TestMidiFile.cpp  TestMidiFile.h  TestNotes.cpp  TestNotes.h  gtesthelper.cpp  gtesthelper.h  main.cpp
test/libmidi_unittest/testFiles/: 1second.cpp.txt  1second.mid  1second.rtttl.txt  buzzer.cpp.txt  cde1.mid
test/libmidi_unittest/test_files/: 250ms.cpp.txt  buzzer.rtttl.txt  cde1 - 0x00.mid  cde1 - 0x51.mid  cde2.mid  mario1up.cpp.txt
testMidi/: TestMidiFile.cpp  TestMidiFile.h  gtesthelper.cpp  gtesthelper.h  main.cpp  testMidi.cpp  testMidi.vcproj
testMidi/testFiles/: 1second.xlsx  250ms.mid  250ms.rtttl.txt  buzzer.mid
